[gd_scene load_steps=4 format=3 uid="uid://dshs45wq2wig1"]

[ext_resource type="Theme" uid="uid://c4x43hephx6al" path="res://themes/list_item_panel/list_item_panel_theme.tres" id="1_vbmf1"]
[ext_resource type="Script" path="res://scripts/menus/main_menu/load_save_item_panel.gd" id="2_daeut"]
[ext_resource type="PackedScene" uid="uid://chpi5qfgk1cqj" path="res://prefabs/ui/sfx_button.tscn" id="2_mtma6"]

[node name="LoadSaveItemPanel" type="Panel"]
custom_minimum_size = Vector2(1120, 152)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme = ExtResource("1_vbmf1")
script = ExtResource("2_daeut")

[node name="SaveSlotLabel" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -66.0
offset_right = 456.0
offset_bottom = -21.0
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
text = "Auto-Save (Loaded)"
scroll_active = false

[node name="PlayerSaveNameLabel" type="RichTextLabel" parent="." groups=["LoadSaveItemPanel"]]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -20.0
offset_right = 342.0
offset_bottom = 20.0
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
bbcode_enabled = true
text = "Player Save Name Goes Here"

[node name="SaveTimeLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = 21.0
offset_right = 143.0
offset_bottom = 47.0
grow_vertical = 2
text = "9999h 59m 59s"

[node name="ButtonHBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -273.0
offset_right = -11.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 2

[node name="SaveBtnControl" type="Control" parent="ButtonHBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2

[node name="SaveButton" parent="ButtonHBoxContainer/SaveBtnControl" instance=ExtResource("2_mtma6")]
custom_minimum_size = Vector2(80, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_right = NodePath("../../CopyBtnControl/CopyButton")
text = "Save"

[node name="LoadBtnControl" type="Control" parent="ButtonHBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2

[node name="LoadButton" parent="ButtonHBoxContainer/LoadBtnControl" instance=ExtResource("2_mtma6")]
custom_minimum_size = Vector2(80, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_right = NodePath("../../CopyBtnControl/CopyButton")
text = "Load"

[node name="CopyBtnControl" type="Control" parent="ButtonHBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2

[node name="CopyButton" parent="ButtonHBoxContainer/CopyBtnControl" instance=ExtResource("2_mtma6")]
custom_minimum_size = Vector2(80, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("../../LoadBtnControl/LoadButton")
focus_neighbor_right = NodePath("../../DeleteBtnControl/DeleteButton")
text = "Copy"

[node name="DeleteBtnControl" type="Control" parent="ButtonHBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2

[node name="DeleteButton" parent="ButtonHBoxContainer/DeleteBtnControl" instance=ExtResource("2_mtma6")]
custom_minimum_size = Vector2(80, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -17.0
offset_right = 32.5
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("../../CopyBtnControl/CopyButton")
focus_neighbor_right = NodePath(".")
text = "Delete"

[connection signal="pressed" from="ButtonHBoxContainer/SaveBtnControl/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="ButtonHBoxContainer/LoadBtnControl/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="ButtonHBoxContainer/CopyBtnControl/CopyButton" to="." method="_on_copy_button_pressed"]
[connection signal="pressed" from="ButtonHBoxContainer/DeleteBtnControl/DeleteButton" to="." method="_on_delete_button_pressed"]
